--- a/setup.cfg
+++ b/setup.cfg
@@ -1,18 +1,27 @@
 [metadata]
-name = example-pkg-YOUR-USERNAME-HERE
+name = never
 version = 1.2.0
 author = Sil Westerveld
-author_email = dev@silwesterveld.com
-description = A small example package
+author_email = dev+never@silwesterveld.com
+description = Never == Next Version
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/swesterveld/next
 project_urls =
     Bug Tracker = https://github.com/swesterveld/next/issues
 classifiers =
-    Programming Language :: Python :: 3
+    Development Status :: 4 - Beta
+    Environment :: Console
+    Intended Audience :: Developers
+    Intended Audience :: System Administrators
     License :: OSI Approved :: MIT License
+    Natural Language :: English
     Operating System :: OS Independent
+    Programming Language :: Python :: 3
+    Topic :: Software Development
+    Topic :: System :: Software Distribution
+    Topic :: Utilities
+    Typing :: Typed
 
 [options]
 package_dir =
