Rename package from 'next' into 'never'

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,10 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.9
+scripts =
+    bin/never
+install_requires =
+    gitpython
 
 [options.packages.find]
 where = src
