--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = never
-version = 1.2.0
+name = ne-ver
+version = 2.0.0
 author = Sil Westerveld
 author_email = dev+never@silwesterveld.com
 description = Never == Next Version
