--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -3,7 +3,7 @@ name: "Auto-merge release"
 on:
   pull_request:
     branches:
-#      - 'release/v[0-9]+.[0-9]+.[0-9]+'
+      - 'release/v[0-9]+.[0-9]+.[0-9]+'
       - 'feature/gh1/github-action-merge-release-branch'
     paths:
       - 'VERSION'
