--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -21,9 +21,11 @@ jobs:
 #      - run: gh pr merge [<number> | <url> | <branch>] [flags]
       - run: |
           echo "Pull Request: ${PRNUM}"
+          echo "PR: ${PR}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PRNUM: ${{ github.event.pull_request.number }}
+          PR: ${{ github.event.pull_request }}
 
 #https://docs.github.com/en/actions/guides/using-github-cli-in-workflows:
 #  GITHUB_REF=refs/pull/20/merge
