--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -23,11 +23,11 @@ jobs:
           echo "Pull Request: ${PRNUM}"
           echo "Base: ${BASE}"
           echo "Head: ${HEAD}"
-          echo "triggered by branch: ${{ GITHUB_REF }}"
           echo "version: `echo $HEAD | sed -e 's/release\///'"
         #          echo "      ${{ GITHUB_BASE_REF }}"
         #          echo "      ${{ GITHUB_HEAD_REF }}"
         #          echo "event path: ${{ GITHUB_EVENT_PATH }}"
+        #          echo "triggered by branch: ${{ GITHUB_REF }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PRNUM: ${{ github.event.pull_request.number }}
