[WIP] fix typo in previous commit

--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -24,7 +24,7 @@ jobs:
           echo "Base: ${BASE}"
           echo "Head: ${HEAD}"
           echo "Version: `echo $HEAD | sed -e 's/release\///'`"
-          echo "NEVER_VERSION=$(echo $HEAD | sed -e 's/release\///'" >> $GITHUB_ENV
+          echo "NEVER_VERSION=$(echo $HEAD | sed -e 's/release\///')" >> $GITHUB_ENV
           echo "Version: $NEVER_VERSION"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
