[WIP] another try with actions/checkout

--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -34,10 +34,14 @@ jobs:
       - name: Test one of the env vars
         run: |
           echo "Version: $NEVER_VERSION"
+      - uses: actions/checkout@v2
+        with:
+          ref: $PRHEAD
       - name: Merge
         run: |
           gh pr merge $PRNUM --merge
         env:
+          PRHEAD: ${{ github.event.pull_request.head.ref }}
           PRNUM: ${{ github.event.pull_request.number }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
