--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           gh pr merge $PR_NUMBER --merge
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
       - uses: actions/checkout@v2
         with:
