--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -25,7 +25,15 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
+#      - uses: actions/checkout@v2
+#        with:
+#          ref: ${{ github.event.pull_request.base.ref }}
       - name: Tag merge commit with new version
         run: |
+          echo "GITHUB_HEAD_REF: $GITHUB_HEAD_REF"
+          echo "GITHUB_BASE_REF: $GITHUB_BASE_REF"
+          echo "github.event.pull_request.head.ref: ${{ github.event.pull_request.head.ref }}
+          echo "github.event.pull_request.base.ref: ${{ github.event.pull_request.base.ref }}
+          git checkout ${{ github.event.pull_request.base.ref }}
           git tag "v${RELEASE_VERSION}"
           git push --tags
