--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Merge pull request
         run: |
           if [[ "$RELEASE_BRANCH" =~ ^release/v?[0-9]+(.[0-9]+){2} ]]; then
-          git config --global user.email "oss@silwesterveld.com"
+          git config --global user.email "never@silwesterveld.com"
           git config --global user.name "Ne-ver"
           git fetch
           git checkout ${{ github.event.pull_request.head.ref }}
